fix: add correct spacing between eyes

--- a/qual-a-cor/styles/ar.css
+++ b/qual-a-cor/styles/ar.css
@@ -6,7 +6,8 @@
 
 #left {
   position: fixed;
-  left: -100px;
+  left: -300px;
+  z-index: 2;
 }
 
 #cam {
@@ -15,7 +16,8 @@
 
 #right {
   position: fixed;
-  right: 0px;
+  right: -300px;
+  z-index: 1;
 }
 
 #slider, #slider-label {
